feat(repository): add pagination GymController
